--- a/index.html
+++ b/index.html
@@ -12,5 +12,7 @@
       <div class="three"></div>
       <div class="four"></div>
     </div>
+
+    <div class="lesson">ish</div>
   </body>
 </html>
